styles/index.css
@charset "utf-8";

/* IDE Support
 * We recommend Stylelint and Tailwind Extensions for better IDE support.
 * @see https://marketplace.visualstudio.com/items?itemName=bradlc.vscode-tailwindcss
 * @see https://marketplace.visualstudio.com/items?itemName=stylelint.vscode-stylelint
*/

@import 'tailwindcss/base';
@import 'tailwindcss/components';
@import 'tailwindcss/utilities';
@import './base.css';
@import './markdown.css';
@import './effects.css';

